Update restaurant name and location in index.html

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div id="main-content" style="display: none;">
             <!-- ヘッダー -->
             <header class="header">
-                <h1>🍽️ レストラン雅</h1>
+                <h1>🍽️ レストランRUNAI</h1>
                 <p class="subtitle">オンライン予約システム</p>
             </header>
 
@@ -102,8 +102,8 @@
                         <div class="info-section">
                             <h3>📍 アクセス</h3>
                             <p>〒100-0001<br>
-                            東京都千代田区千代田1-1-1<br>
-                            千代田駅より徒歩5分</p>
+                            東京都渋谷区恵比寿西<br>
+                            恵比寿駅より徒歩5分</p>
                         </div>
 
                         <div class="info-section">
